# EchoIsland

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MAC_WIN_UI_REFACTOR_PLAN.md  README.md  README.zh-CN.md  llms.txt  package-lock.json  package.json
apps/desktop-host/: Cargo.toml
apps/desktop-host/src/: main.rs
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_runtime.rs  app_settings.rs  claude_scan.rs  codex_scan.rs  command_services.rs  commands.rs  constants.rs  diagnostics.rs  display_settings.rs  focus_store.rs  http_receiver.rs  island_window.rs  macos_lifecycle_diagnostics.rs  macos_native_panel.rs  macos_native_test_panel.rs  macos_native_test_panel_stub.rs  macos_panel.rs  macos_shared_expanded_window.rs  main.rs  native_panel_runtime.rs  native_panel_scene_input.rs  native_ui_refresh.rs  notification_sound.rs  panel_scene_service.rs  platform.rs  platform_stub.rs  session_scan_runner.rs  startup_service.rs  terminal_focus_service.rs  tray.rs  updater_service.rs  web_panel_scene_service.rs  window_surface_service.rs  windows_native_panel.rs
apps/desktop/src-tauri/src/macos_native_panel/: card_animation.rs  card_stack.rs  compact_bar.rs  compact_bar_layout.rs  completion_glow_view.rs  display_helpers.rs  macos_visual_plan.rs  mascot.rs  mascot_render.rs  mascot_views.rs  panel_base_container_views.rs  panel_constants.rs  panel_display_source.rs  panel_entry.rs  panel_geometry.rs  panel_globals.rs  panel_handles_init.rs  panel_helpers.rs  panel_hit_testing.rs  panel_host_adapter.rs  panel_host_commands.rs  panel_host_controller.rs  panel_host_runtime.rs  panel_interaction_effects.rs  panel_refs.rs  panel_render.rs  panel_runtime_backend.rs  panel_runtime_dispatch.rs  panel_scene_adapter.rs  panel_setup.rs  panel_shoulder.rs  panel_snapshot.rs  panel_state_init.rs  panel_transition_entry.rs  panel_types.rs  queue_logic.rs  tests.rs  text_metrics.rs  transition_logic.rs  transition_runner.rs  (+1 more)
apps/desktop/src-tauri/src/macos_native_panel/card_views/: common.rs  status_cards.rs  visual_card.rs
apps/desktop/src-tauri/src/macos_native_panel/macos_visual_plan/: compact_adapter.rs  glow_adapter.rs  mascot_adapter.rs
apps/desktop/src-tauri/src/macos_native_test_panel/: card_animation.rs  card_metrics.rs  card_stack.rs  card_views.rs  compact_bar.rs  compact_bar_layout.rs  completion_glow_view.rs  display_helpers.rs  facade.rs  mascot.rs  mascot_motion.rs  mascot_render.rs  mascot_scene.rs  panel_action_buttons.rs  panel_assembly.rs  panel_constants.rs  panel_entry.rs  panel_geometry.rs  panel_handles_init.rs  panel_helpers.rs  panel_hit_testing.rs  panel_host_adapter.rs  panel_host_commands.rs  panel_host_controller.rs  panel_host_descriptor.rs  panel_host_runtime.rs  panel_interaction.rs  panel_interaction_effects.rs  panel_loops.rs  panel_refs.rs  panel_render.rs  panel_runtime_backend.rs  panel_runtime_dispatch.rs  panel_runtime_input.rs  panel_scene_adapter.rs  panel_screen_geometry.rs  panel_setup.rs  panel_shoulder.rs  panel_snapshot.rs  panel_state_init.rs  (+12 more)
apps/desktop/src-tauri/src/macos_native_test_panel/card_views/: common.rs  session_cards.rs  settings_cards.rs  status_card_render.rs  status_card_specs.rs  status_cards.rs  visual_card.rs
apps/desktop/src-tauri/src/macos_native_test_panel/macos_visual_plan/: compact_adapter.rs  glow_adapter.rs  mascot_adapter.rs
apps/desktop/src-tauri/src/native_panel_core/: animation.rs  card_metrics.rs  interaction.rs  mascot_runtime.rs  mod.rs  queue.rs  reminder.rs  render.rs  settings.rs  style.rs  tests.rs  transitions.rs  types.rs
apps/desktop/src-tauri/src/native_panel_core/constants/: active_count.rs  animation.rs  cards.rs  geometry.rs  mascot.rs  mod.rs  runtime.rs  style.rs
apps/desktop/src-tauri/src/native_panel_renderer/: action_button_visual_spec.rs  animation_plan.rs  animation_scheduler.rs  card_visual_spec.rs  completion_glow_visual_spec.rs  descriptors.rs  env_flags.rs  host_runtime_facade.rs  mascot_visual_spec.rs  mod.rs  platform_adapter.rs  presentation_model.rs  render_commands.rs  renderer_backend.rs  runtime_backend.rs  runtime_click.rs  runtime_commands.rs  runtime_hover.rs  runtime_interaction.rs  runtime_polling.rs  runtime_render_payload.rs  runtime_scene_cache.rs  runtime_scene_sync.rs  runtime_settings_surface.rs  runtime_tests.rs  runtime_transition_slots.rs  shell_command.rs  shell_pump.rs  traits.rs  transition_controller.rs  visual_plan.rs  visual_primitives.rs  window_message_pump.rs
apps/desktop/src-tauri/src/native_panel_scene/: build.rs  mod.rs  scene.rs  session_card_scene.rs  settings_scene.rs  status_card_scene.rs  surface_scene.rs  tests.rs
apps/desktop/src-tauri/src/terminal_focus/: learning.rs  macos.rs  mod.rs  model.rs  policy.rs  windows.rs
apps/desktop/src-tauri/src/terminal_focus/macos/: activation.rs  native_apps.rs  osascript.rs  process_inference.rs  target.rs  title_match.rs  tmux.rs  util.rs
apps/desktop/src-tauri/src/terminal_focus/windows/: focus_ops.rs  matcher.rs  tab_helper.rs  window_enum.rs
apps/desktop/src-tauri/src/windows_native_panel/: d2d_painter.rs  direct2d.rs  directwrite.rs  dpi.rs  draw_presenter.rs  facade.rs  hit_region.rs  host_runtime.rs  host_window.rs  layered_window.rs  message_dispatch.rs  paint_backend.rs  platform_loop.rs  renderer.rs  runtime_backend.rs  runtime_entry.rs  runtime_input.rs  runtime_traits.rs  tests.rs  window_shell.rs
apps/hook-bridge/: Cargo.toml
apps/hook-bridge/src/: main.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: adapter.rs  install_support.rs  lib.rs  platform_support.rs
crates/adapters/src/claude/: install.rs  mod.rs  scan.rs
crates/adapters/src/codex/: install.rs  mod.rs  scan.rs
crates/adapters/src/openclaw/: install.rs  mod.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
technical-notes/: README.en.md  README.zh-CN.md  architecture-current.en.md  (+11 more)
(+76 files in other folders)
