[workspace]
members = [
  "apps/desktop/src-tauri",
  "apps/desktop-host",
  "apps/hook-bridge",
  "crates/adapters",
  "crates/core",
  "crates/ipc",
  "crates/paths",
  "crates/persistence",
  "crates/runtime"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.5.0"
authors = ["MoLing14725"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "io-util", "io-std", "fs", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
windows-sys = "0.61"
