[package]
name = "desktop-host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
echoisland-adapters = { path = "../../crates/adapters" }
echoisland-core = { path = "../../crates/core" }
echoisland-ipc = { path = "../../crates/ipc" }
echoisland-paths = { path = "../../crates/paths" }
echoisland-runtime = { path = "../../crates/runtime" }
