[package]
name = "echoisland-persistence"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
echoisland-core = { path = "../core" }
echoisland-paths = { path = "../paths" }
