[package]
name = "echoisland-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
echoisland-adapters = { path = "../../../crates/adapters" }
echoisland-core = { path = "../../../crates/core" }
echoisland-ipc = { path = "../../../crates/ipc" }
echoisland-paths = { path = "../../../crates/paths" }
echoisland-runtime = { path = "../../../crates/runtime" }
notify = "8.2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Foundation_Numerics", "Win32_Foundation", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_DirectWrite", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi", "Win32_Graphics_Imaging", "Win32_System_Com", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Media_Multimedia", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSControl", "NSEvent", "NSFont", "NSGraphics", "NSImage", "NSPanel", "NSScreen", "NSText", "NSTextField", "NSView", "NSWindow", "objc2-core-graphics"] }
objc2-core-graphics = { version = "0.3", features = ["CGPath"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSNotification", "NSObject", "NSOperation", "NSString", "block2", "objc2-core-foundation"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CAShapeLayer", "CATransaction", "objc2-core-graphics"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
